simple bug fixed

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -8,28 +8,28 @@
     width: 100%;
     z-index: 2;
     font-family: "Poppins", sans-serif;
-  
-  
-  
+
+
+
     .header-top-navbar {
-  
+
       display: flex;
       align-items: center;
       background: rgb(192, 192, 192);
       gap: 20px;
-  
+
       .header-top-navbar__icon {
         margin-left: 20px;
         color: rgb(34, 91, 224);
       }
-  
+
       .header-top-navbar-close {
         cursor: pointer;
       }
     }
-  
-  
-  
+
+
+
     .header-navbar {
       height: 80px;
       background-color: #2c3855;
@@ -39,19 +39,20 @@
       align-items: center;
       justify-content: space-between;
       box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
-  
-  
+
+
       .nav_logo {
         font-size: 0;
         font-weight: 20%;
         color: #f3f4f6;
-  
-        .nav_logo_main{
+        cursor: pointer;
+
+        .nav_logo_main {
           width: 70px;
           overflow: visible;
         }
       }
-  
+
       .nav_links {
         list-style: none;
         display: flex;
@@ -59,22 +60,22 @@
         gap: 5%;
         padding-top: 20px;
         color: white;
-  
-  
+
+
         .link a {
           font-weight: 500;
           color: #f3f4f6;
           transition: 0.3s;
         }
-  
+
         .link a:hover {
           color: #8a8a8a;
         }
       }
     }
   }
-  
-  
+
+
   .plane {
     position: fixed;
     top: 50px;
@@ -88,7 +89,7 @@
     transition: left 0.3s ease;
     z-index: 2;
     display: none;
-  
+
     .plane-icon {
       color: white;
     }
@@ -102,28 +103,28 @@
     width: 100%;
     z-index: 2;
     font-family: "Poppins", sans-serif;
-  
-  
-  
+
+
+
     .header-top-navbar {
-  
+
       display: flex;
       align-items: center;
       background: rgb(192, 192, 192);
       gap: 20px;
-  
+
       .header-top-navbar__icon {
         margin-left: 20px;
         color: rgb(34, 91, 224);
       }
-  
+
       .header-top-navbar-close {
         cursor: pointer;
       }
     }
-  
-  
-  
+
+
+
     .header-navbar {
       height: 80px;
       background-color: #2c3855;
@@ -133,18 +134,19 @@
       align-items: center;
       justify-content: space-between;
       box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
-  
-  
+
+
       .nav_logo {
         font-size: 1.5rem;
         font-weight: 600;
         color: #f3f4f6;
-  
-        .nav_logo_main{
+        cursor: pointer;
+
+        .nav_logo_main {
           width: 10%;
         }
       }
-  
+
       .nav_links {
         padding-right: 9%;
         list-style: none;
@@ -153,22 +155,22 @@
         gap: 2rem;
         padding-top: 20px;
         color: white;
-  
-  
+
+
         .link a {
           font-weight: 500;
           color: #f3f4f6;
           transition: 0.3s;
         }
-  
+
         .link a:hover {
           color: #8a8a8a;
         }
       }
     }
   }
-  
-  
+
+
   .plane {
     position: fixed;
     top: 50px;
@@ -182,7 +184,7 @@
     transition: left 0.3s ease;
     z-index: 2;
     display: none;
-  
+
     .plane-icon {
       color: white;
     }
@@ -196,28 +198,28 @@
     width: 100%;
     z-index: 2;
     font-family: "Poppins", sans-serif;
-  
-  
-  
+
+
+
     .header-top-navbar {
-  
+
       display: flex;
       align-items: center;
       background: rgb(192, 192, 192);
       gap: 20px;
-  
+
       .header-top-navbar__icon {
         margin-left: 20px;
         color: rgb(34, 91, 224);
       }
-  
+
       .header-top-navbar-close {
         cursor: pointer;
       }
     }
-  
-  
-  
+
+
+
     .header-navbar {
       height: 100px;
       background-color: #2c3855;
@@ -227,18 +229,19 @@
       align-items: center;
       justify-content: space-between;
       box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
-  
-  
+
+
       .nav_logo {
         font-size: 1.5rem;
         font-weight: 600;
         color: #f3f4f6;
-  
-        .nav_logo_main{
+        cursor: pointer;
+
+        .nav_logo_main {
           width: 10%;
         }
       }
-  
+
       .nav_links {
         padding-right: 9%;
         list-style: none;
@@ -247,22 +250,22 @@
         gap: 2rem;
         padding-top: 20px;
         color: white;
-  
-  
+
+
         .link a {
           font-weight: 500;
           color: #f3f4f6;
           transition: 0.3s;
         }
-  
+
         .link a:hover {
           color: #8a8a8a;
         }
       }
     }
   }
-  
-  
+
+
   .plane {
     position: fixed;
     top: 50px;
@@ -276,7 +279,7 @@
     transition: left 0.3s ease;
     z-index: 2;
     display: none;
-  
+
     .plane-icon {
       color: white;
     }
