--- a/src/components/seatScreen/index.scss
+++ b/src/components/seatScreen/index.scss
@@ -1,73 +1,127 @@
-.chairScreen-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: green;
-    height: 100%;
-    padding: 60px;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap");
 
-    .chairScreen-container-content {
+
+.chairScreen-container-content {
+
+    font-family: "Poppins", sans-serif;
+    background: white;
+    position: relative;
+    top: 200px;
+
+    .upper_div {
         display: flex;
-        align-items: center;
-        justify-content: center;
-        background: rgb(0, 255, 204);
-        position: relative;
-        top: 200px;
+        gap: 540px;
+        margin-left: 310px;
+        color: rgb(44, 56, 85);
 
-        .flapleft {
-            transform: scaleX(-1);
+        button {
+            color: white;
+            padding: 10px 20px;
+            background-color: rgb(44, 56, 85);
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            transition: 0.3s;
+
+            &:hover {
+                background-color: rgb(83, 106, 160);
+            }
         }
 
-        .chairScreen-container__box {
-            display: flex;
-            flex-direction: column;
-            background: black;
-            padding: 20px;
+    }
+
+    .line_horizontal {
+        position: absolute;
+        left: 0;
+        margin-top: 50px;
+        transform: translateY(-50%);
+        width: 100%;
+        height: 1px;
+        background-color: black;
+    }
+
+
+
+    .middle_div {
+        display: grid;
+        gap: 1500px;
+
+
+        .plane_top_view {
+            margin-top: 150px;
+
+            width: 900px;
+            height: 1800px;
+            display: inline-block;
             position: relative;
+            left: 0;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+            clip-path: inset(0px -15px 0px 0px);
+            border: none;
 
-            clip-path: polygon(50% 0%, 0 100px, 0 100%, 100% 100%, 100% 100px);
 
-            .chairScreen-container__box__plane {
-                background: red;
-                border-radius: 50%;
-                position: relative;
-                clip-path: ellipse(100px 50px at 50% 0);
+        }
+
+
+        .legend {
+
+            position: absolute;
+            top: 500px;
+            left: 70px;
+
+
+            .legend_item {
+                display: flex;
+                gap: 10px;
+                margin-bottom: 25px;
+
+                .legend_box_taken {
+                    width: 15px;
+                    height: 15px;
+                    border-radius: 100%;
+                    background-color: rgb(44, 56, 85);
+                }
+
+                .legend_box_selected {
+                    width: 15px;
+                    height: 15px;
+                    border-radius: 100%;
+                    background-color: rgb(83, 106, 160);
+                }
+
+                .legend_box_empty {
+                    width: 15px;
+                    height: 15px;
+                    border-radius: 100%;
+                    background-color: rgb(240, 105, 60);
+                }
             }
+        }
+
+
+        .chairScreen-container__box {
+
+            position: absolute;
+            left: 340px;
+            top: 420px;
+            z-index: 1;
+            background-color: #f6f6f7;
+            padding: 5px;
+            color: #FFFFFF;
+            font-weight: bold;
+            width: 218px;
+            height: 1128px;
+
+
+
 
             .chairScreen-container__box-passengerSide-first {
                 display: flex;
                 flex-direction: column;
-                margin-top: 330px;
+                margin-top: 20px;
                 gap: 10px;
 
-                h3 {
-                    color: wheat;
-                }
 
-                p {
-                    color: wheat;
-                }
-
-                .first-seat {
-                    display: flex;
-
-                    .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: rgb(219, 161, 161);
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        font-weight: bold;
-                        font-size: 14px;
-                        cursor: pointer;
-
-                        &:nth-child(3) {
-                            margin-right: 40px;
-                        }
-                    }
-                }
             }
 
             .chairScreen-container__box-passengerSide-second {
@@ -88,20 +142,25 @@
                     flex-direction: column;
 
                     .seat {
-                        width: 50px;
-                        height: 50px;
-                        margin: 5px;
-                        background-color: rgb(188, 124, 124);
+                        width: 30px;
+                        height: 35px;
+                        margin: 6px 4px;
+                        background-color: #ccc;
                         display: flex;
                         justify-content: center;
                         align-items: center;
                         font-weight: bold;
                         font-size: 14px;
                         cursor: pointer;
+                        border-radius: 15%;
+
+                        &:hover {
+                            background-color: rgb(255, 64, 0);
+                        }
                     }
 
                     .seat-gap {
-                        margin-right: 40px;
+                        margin-right: 30px;
                     }
 
                     .seat-row {
@@ -110,47 +169,68 @@
                     }
                 }
             }
+
+
+        }
+
+
+
+
+        .info_box_group {
+            position: absolute;
+            width: 37%;
+            height: 1800px;
+            top: 190px;
+            left: 905px;
+            display: flex;
+            flex-direction: column;
+
+
+            .info_box {
+                height: 500px;
+                margin: 40px;
+                background-color: rgb(205, 205, 205, 0.7);
+                box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+                border-radius: 5%;
+                transition: 0.3s;
+
+                &:hover {
+                    background-color: #ccc;
+                }
+
+                h2 {
+                    padding-top: 20px;
+                }
+
+                p {
+                    padding: 30px;
+                }
+
+            }
+
         }
     }
+
+    .lower_div {
+        button {
+            margin-top: 200px;
+            margin-left: 900px;
+            padding: 10px 20px;
+            color: white;
+            background-color: rgb(44, 56, 85);
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            transition: 0.3s;
+
+            &:hover {
+                background-color: rgb(83, 106, 160);
+            }
+        }
+    }
+
 }
 
-.seat-row {
-    display: flex;
-    align-items: center;
-}
-
-.seat {
-    padding: 8px;
-    margin: 2px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-}
-
-.seat-gap {
-    width: 16px;
-}
-
-.seat.reserved {
-    background-color: red;
-    color: #fff;
-}
-
-.seat.reserved {
-    background: red;
-    color: red;
-}
-
-.seat.selected {
-    background: red;
-    color: rgb(0, 255, 119);
-}
-
-.seat-popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 16px;
-    background-color: #fff;
-    border: 1px solid #ccc;
+.footer {
+    margin-top: 300px;
 }
