--- a/src/components/seatScreen/index.scss
+++ b/src/components/seatScreen/index.scss
@@ -234,3 +234,13 @@
 .footer {
     margin-top: 300px;
 }
+
+.seat-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 16px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+}
