--- a/src/components/payScreen/index.scss
+++ b/src/components/payScreen/index.scss
@@ -2,58 +2,58 @@
 
 
 
-.payScreen__container{
+.payScreen__container {
     margin-bottom: 90px;
 }
 
 .payScreen__container-navbar {
     font-family: "Poppins", sans-serif;
 
-    
-        nav {
-            background-color: #2c3855;
-            margin: auto;
-            padding: 2rem 1rem;
+
+    nav {
+        background-color: #2c3855;
+        margin: auto;
+        padding: 2rem 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
+
+
+        .nav_logo {
+            padding-left: 9%;
+            font-size: 1.5rem;
+            font-weight: 600;
+            color: #f3f4f6;
+        }
+
+        .nav_links {
+            padding-right: 9%;
+            list-style: none;
             display: flex;
             align-items: center;
-            justify-content: space-between;
-            box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.4);
+            gap: 2rem;
+            padding-top: 15px;
 
-
-            .nav_logo {
-                padding-left: 9%;
-                font-size: 1.5rem;
-                font-weight: 600;
+            .link a {
+                font-weight: 500;
                 color: #f3f4f6;
-              }
-              
-              .nav_links {
-                padding-right: 9%;
-                list-style: none;
-                display: flex;
-                align-items: center;
-                gap: 2rem;
-                padding-top: 15px;
+                transition: 0.3s;
 
-                .link a {
-                    font-weight: 500;
-                    color: #f3f4f6;
-                    transition: 0.3s;
+                &:hover {
+                    color: #767268;
+                }
+            }
 
-                    &:hover {
-                        color: #767268;
-                      }
-                  }
-                  
-                  
-              }
-              
-              
-          }
-          
-          
-         
-    
+
+        }
+
+
+    }
+
+
+
+
 
     .payScreen__container-navbar-alt {
         display: flex;
@@ -74,31 +74,31 @@
     height: 100vh;
 
     @media (max-width: 767px) {
-        .payScreen-container-box{
+        .payScreen-container-box {
             position: relative;
             transform: scale(0.6);
         }
-    
+
     }
-    
+
     @media (min-width: 768px) and (max-width: 1023px) {
-        .payScreen-container-box{
+        .payScreen-container-box {
             margin-top: 60px;
             position: relative;
             transform: scale(0.7);
         }
-    
+
     }
-    
+
     @media (min-width: 1024px) {
-        .payScreen-container-box{
+        .payScreen-container-box {
             margin-top: 120px;
             position: relative;
             transform: scale(0.7);
         }
-    
+
     }
-    
+
     .payScreen-container__paySide {
         display: flex;
         align-items: center;
@@ -122,17 +122,12 @@
 
     }
 
-    @media (max-width: 767px) {
+    @media (max-width: 767px) {}
 
-    }
-    
-    @media (min-width: 768px) and (max-width: 1023px) {
-    
-    }
-    
-    @media (min-width: 1024px) {
-    
-    }
+    @media (min-width: 768px) and (max-width: 1023px) {}
+
+    @media (min-width: 1024px) {}
+
     .payScreen-container-cardForm {
         display: flex;
         align-items: center;
@@ -187,14 +182,16 @@
                     border: 1px solid rgba(189, 189, 189, 0.347);
                     box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
 
-                    option{
+                    option {
                         background-color: #ffffff !important;
                     }
-                    option:hover{
+
+                    option:hover {
                         background-color: rgb(240, 90, 40) !important;
                         color: #000000 !important;
                     }
                 }
+
                 select::-webkit-scrollbar {
                     width: 3px !important;
                     color: rgb(240, 90, 40);
@@ -211,10 +208,10 @@
             width: 100%;
             bottom: 80px;
 
-            .payScreen-container-box__installment-inputGroup{
+            .payScreen-container-box__installment-inputGroup {
                 display: flex;
                 gap: 30px;
-                
+
             }
         }
 
@@ -255,7 +252,7 @@
         width: 500px;
         height: 300px;
         perspective: 1000px;
-        
+
     }
 
     .payScreen-card__front,
@@ -401,7 +398,7 @@
 @media (max-width: 767px) {
     .toast-container {
         font-family: "Poppins", sans-serif;
-    
+
         display: flex;
         align-items: center;
         justify-content: center;
@@ -414,7 +411,7 @@
         opacity: 2;
         border-radius: 40px;
         background: rgb(44, 56, 85, 0.8);
-    
+
         .popup-content {
             display: flex;
             flex-direction: column;
@@ -422,43 +419,43 @@
             justify-content: space-around;
             height: 200px;
             border-radius: 10px;
-    
-    
+
+
             .popup-content__box-pnr {
                 display: flex;
                 justify-content: space-between;
             }
-    
+
             .popup-content-button {
                 display: flex;
                 gap: 30px;
                 width: 100%;
-    
+
                 button {
                     border-style: none;
                     color: white;
                     height: 40px;
                     font-size: 10px;
                 }
-    
+
                 .popup-content-button__main {
                     color: white;
                     background: rgb(240, 90, 40);
-    
+
                     &:hover {
                         background: rgb(36, 141, 252);
                     }
                 }
-    
+
                 .popup-content-button__summary {
-    
+
                     color: white;
                     background: rgb(240, 90, 40);
-    
+
                     &:hover {
                         background: rgb(36, 141, 252);
                     }
-    
+
                 }
             }
         }
@@ -468,7 +465,7 @@
 @media (min-width: 768px) and (max-width: 1023px) {
     .toast-container {
         font-family: "Poppins", sans-serif;
-    
+
         display: flex;
         align-items: center;
         justify-content: center;
@@ -481,7 +478,7 @@
         opacity: 2;
         border-radius: 40px;
         background: rgb(44, 56, 85, 0.8);
-    
+
         .popup-content {
             display: flex;
             flex-direction: column;
@@ -489,43 +486,43 @@
             justify-content: space-around;
             height: 200px;
             border-radius: 10px;
-    
-    
+
+
             .popup-content__box-pnr {
                 display: flex;
                 justify-content: space-between;
             }
-    
+
             .popup-content-button {
                 display: flex;
                 gap: 30px;
                 width: 100%;
-    
+
                 button {
                     border-style: none;
                     color: white;
                     height: 40px;
                     font-size: 10px;
                 }
-    
+
                 .popup-content-button__main {
                     color: white;
                     background: rgb(240, 90, 40);
-    
+
                     &:hover {
                         background: rgb(36, 141, 252);
                     }
                 }
-    
+
                 .popup-content-button__summary {
-    
+
                     color: white;
                     background: rgb(240, 90, 40);
-    
+
                     &:hover {
                         background: rgb(36, 141, 252);
                     }
-    
+
                 }
             }
         }
@@ -535,7 +532,7 @@
 @media (min-width: 1024px) {
     .toast-container {
         font-family: "Poppins", sans-serif;
-    
+
         display: flex;
         align-items: center;
         justify-content: center;
@@ -547,7 +544,7 @@
         opacity: 2;
         border-radius: 40px;
         background: rgb(44, 56, 85, 0.8);
-    
+
         .popup-content {
             display: flex;
             flex-direction: column;
@@ -555,43 +552,43 @@
             justify-content: space-around;
             height: 200px;
             border-radius: 10px;
-    
-    
+
+
             .popup-content__box-pnr {
                 display: flex;
                 justify-content: space-between;
             }
-    
+
             .popup-content-button {
                 display: flex;
                 gap: 30px;
                 width: 100%;
-    
+
                 button {
                     border-style: none;
                     color: white;
                     height: 40px;
                     font-size: 10px;
                 }
-    
+
                 .popup-content-button__main {
                     color: white;
                     background: rgb(240, 90, 40);
-    
+
                     &:hover {
                         background: rgb(36, 141, 252);
                     }
                 }
-    
+
                 .popup-content-button__summary {
-    
+
                     color: white;
                     background: rgb(240, 90, 40);
-    
+
                     &:hover {
                         background: rgb(36, 141, 252);
                     }
-    
+
                 }
             }
         }
