--- a/src/components/seatScreen/index.scss
+++ b/src/components/seatScreen/index.scss
@@ -277,3 +277,172 @@
 .row-number {
     color: red;
 }
+
+.middle_div-return {
+    display: grid;
+    gap: 1500px;
+
+
+    .plane_top_view {
+        margin-top: 150px;
+
+        width: 900px;
+        height: 1800px;
+        display: inline-block;
+        position: relative;
+        left: 0;
+        box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+        clip-path: inset(0px -15px 0px 0px);
+        border: none;
+
+
+    }
+
+
+    .legend {
+
+        position: absolute;
+        top: 500px;
+        left: 70px;
+
+
+        .legend_item {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 25px;
+
+            .legend_box_taken {
+                width: 15px;
+                height: 15px;
+                border-radius: 100%;
+                background-color: rgb(44, 56, 85);
+            }
+
+            .legend_box_selected {
+                width: 15px;
+                height: 15px;
+                border-radius: 100%;
+                background-color: rgb(83, 106, 160);
+            }
+
+            .legend_box_empty {
+                width: 15px;
+                height: 15px;
+                border-radius: 100%;
+                background-color: rgb(240, 105, 60);
+            }
+        }
+    }
+
+
+    .chairScreen-container__box {
+
+        position: absolute;
+        left: 340px;
+        top: 420px;
+        z-index: 1;
+        background-color: #f6f6f7;
+        padding: 5px;
+        color: #FFFFFF;
+        font-weight: bold;
+        width: 218px;
+        height: 1128px;
+
+
+
+
+        .chairScreen-container__box-passengerSide-first {
+            display: flex;
+            flex-direction: column;
+            margin-top: 20px;
+            gap: 10px;
+
+
+        }
+
+        .chairScreen-container__box-passengerSide-second {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            h3 {
+                color: wheat;
+            }
+
+            p {
+                color: white;
+            }
+
+            .second-seat {
+                display: flex;
+                flex-direction: column;
+
+                .seat {
+                    width: 30px;
+                    height: 35px;
+                    margin: 6px 4px;
+                    background-color: #ccc;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    font-weight: bold;
+                    font-size: 14px;
+                    cursor: pointer;
+                    border-radius: 15%;
+
+                    &:hover {
+                        background-color: rgb(255, 64, 0);
+                    }
+                }
+
+                .seat-gap {
+                    margin-right: 30px;
+                }
+
+                .seat-row {
+                    display: flex;
+                    flex-direction: row;
+                }
+            }
+        }
+
+
+    }
+
+
+
+
+    .info_box_group {
+        position: absolute;
+        width: 37%;
+        height: 1800px;
+        top: 190px;
+        left: 905px;
+        display: flex;
+        flex-direction: column;
+
+
+        .info_box {
+            height: 500px;
+            margin: 40px;
+            background-color: rgb(205, 205, 205, 0.7);
+            box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+            border-radius: 5%;
+            transition: 0.3s;
+
+            &:hover {
+                background-color: #ccc;
+            }
+
+            h2 {
+                padding-top: 20px;
+            }
+
+            p {
+                padding: 30px;
+            }
+
+        }
+
+    }
+}
