--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -6,8 +6,11 @@
 
   .footer {
     background-color: #ffffff;
-    width: 100%;
+    width: 95%;
+    margin: auto;
     font-family: "Poppins", sans-serif;
+    margin-top: 120px;
+
   
     .footer_container {
       display: grid;
