--- a/src/components/content/searchContent/searchItem2/index.scss
+++ b/src/components/content/searchContent/searchItem2/index.scss
@@ -6,67 +6,134 @@
         align-items: center;
         justify-content: center;
         padding: 10px;
-        height: 120px;
+        min-height: 120px;
     
     
     
     
         .searchItem-two__container-form {
-            display: flex;
+            display: grid;
             align-items: center;
             justify-content: space-between;
             width: 100%;
+            height: 100%;
+            grid-template-columns: 35% 25% 40%;
+            grid-template-rows: 45% 55%;
+            grid-template-areas:
+                "a a c"
+                "b b b";
     
             .searchItem-two__container-inputBox {
+                grid-area: a;
+                width: 100%;
                 input {
                     border-style: none;
                     outline: none;
-                    margin-left: 3%;
+                    width: 90%;
+                    margin-left: 5px;
                     margin-top: 25px;
+                    bottom: 0px;
                     background-color: rgb(244, 246, 248);
                     box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
-                    border-radius: 4px;
-                    width: 97%;
+                    border-radius: 0;
     
     
                     &::placeholder {
-                        color: rgba(36, 36, 36, 0.7);
+                        color: rgb(140, 140, 141);
                     }
                 }
             }
+    
+            .searchItem-two__container__ports {
+                display: grid;
+                grid-area: b;
+                width: 100%;
+                height: 100%;
+                padding: 10px;
+                align-items: center;
+                grid-template-columns: 40% 40% 20%;
+                grid-template-rows: 34% 33% 33%;
+                grid-template-areas:
+                "a a a"
+                "b b b"
+                "c c c";
+    
+                .searchItem-two__container__ports-info {
+                    grid-area: a;
+                    display: flex;
+                    gap: 10px;
+                    margin: auto;
+                    background-color: #f4f5f7;
+                    border: 1px solid rgb(215, 215, 215);
+                    padding: 5px 8px;
+                    border-radius: 4px;
 
+                    p{
+                        margin-bottom: 0px;
+                        font-weight: bold;
+                    }
+                    svg{margin-top: 2%;}
+    
+                }
+    
+                .passenger-seat{
+                    grid-area: b;
+                    width: 100%;
+                    display: grid;
+                    border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
+
+                    .passenger-seat-div1{
+
+                        width: 100%;
+
+                        .passenger-seat-div2{
+                            width: 100%;
+                            display: grid;
+                            grid-template-columns: 70% 30%;
+                            text-align: end;
+
+                            .passenger-seat-div2-p{
+                                text-align: left;
+                            }
+
+                            p{
+                                padding: 7px 0px;
+                                margin-bottom: 0px;
+                                color: gray;
+                                font-weight: 400;
+                            }
+                        }
+                    }
+                }
+                .passenger-date{
+                    grid-area: c;
+                    height: 100%;
+                    text-align: end;
+                    padding: 12px 0px;
+                    border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
+                    color: gray;
+                    font-weight: 400;
+                    p{
+                        margin-bottom: 0px !important;
+                    }
+                }
+
+
+            }
             .searchItem-two__container-button {
-                margin-left: 3%;
+                grid-area: c;
+                margin: auto;
                 background-color: rgb(240, 105, 60);
-                height: 50px;
-                width: 180px;
+                height: 40px;
+                width: 80px;
                 border-radius: 4px;
                 border: 0px;
+                font-size: 10px;
     
                 &:hover {
                     background-color: #536aa0;
                 }
             }
-    
-            .searchItem-two__container__ports {
-                display: flex;
-                align-items: flex-start;
-                flex-direction: column;
-                padding: 20px;
-                width: 100%;
-    
-                .searchItem-two__container__ports-info {
-                    display: flex;
-                    gap: 20px;
-    
-                }
-    
-                .searchItem-two__container__ports-info__firstp {
-                    margin-right: 32px;
-                }
-            }
-    
-    
             
         }
     }
@@ -85,54 +152,117 @@
     
     
         .searchItem-two__container-form {
-            display: flex;
+            display: grid;
             align-items: center;
             justify-content: space-between;
             width: 100%;
+            grid-template-columns: 35% 25% 40%;
     
             .searchItem-two__container-inputBox {
+                grid-column: 1;
+                grid-row: 1;
+                width: 100%;
                 input {
                     border-style: none;
                     outline: none;
                     margin-left: 10px;
                     margin-top: 25px;
+                    bottom: 0px;
                     background-color: rgb(244, 246, 248);
                     box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
                     border-radius: 0;
-                    width: 300px;
     
     
                     &::placeholder {
-                        color: rgba(36, 36, 36, 0.7);
+                        color: rgb(140, 140, 141);
                     }
                 }
             }
     
             .searchItem-two__container__ports {
-                display: flex;
-                align-items: flex-start;
-                flex-direction: column;
-                padding: 20px;
+                display: grid;
+                grid-column: 3;
+                grid-row: 1;
                 width: 100%;
+                height: 100%;
+                padding: 10px;
+                align-items: center;
+                grid-template-columns: 40% 40% 20%;
+                grid-template-rows: 34% 33% 33%;
+                grid-template-areas:
+                "a a a"
+                "b b b"
+                "c c c";
     
                 .searchItem-two__container__ports-info {
+                    grid-area: a;
                     display: flex;
-                    gap: 20px;
+                    gap: 10px;
+                    margin: auto;
+                    background-color: #f4f5f7;
+                    border: 1px solid rgb(215, 215, 215);
+                    padding: 5px 8px;
+                    border-radius: 4px;
+
+                    p{
+                        margin-bottom: 0px;
+                        font-weight: bold;
+                    }
+                    svg{margin-top: 2%;}
     
                 }
     
-                .searchItem-two__container__ports-info__firstp {
-                    margin-right: 32px;
+                .passenger-seat{
+                    grid-area: b;
+                    width: 100%;
+                    display: grid;
+                    border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
+
+                    .passenger-seat-div1{
+
+                        width: 100%;
+
+                        .passenger-seat-div2{
+                            width: 100%;
+                            display: grid;
+                            grid-template-columns: 70% 30%;
+                            text-align: end;
+
+                            .passenger-seat-div2-p{
+                                text-align: left;
+                            }
+
+                            p{
+                                padding: 7px 0px;
+                                margin-bottom: 0px;
+                                color: gray;
+                                font-weight: 400;
+                            }
+                        }
+                    }
                 }
+                .passenger-date{
+                    grid-area: c;
+                    height: 100%;
+                    text-align: end;
+                    padding: 12px 0px;
+                    border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
+                    color: gray;
+                    font-weight: 400;
+                    p{
+                        margin-bottom: 0px !important;
+                    }
+                }
+
+
             }
-    
-    
             .searchItem-two__container-button {
-                margin-right: 60px;
-                margin-top: 40px;
+                margin: auto;
+                grid-column: 2;
+                grid-row: 1;
                 background-color: rgb(240, 105, 60);
                 height: 50px;
-                width: 180px;
+                width: 130px;
                 border-radius: 4px;
                 border: 0px;
     
@@ -140,6 +270,7 @@
                     background-color: #536aa0;
                 }
             }
+            
         }
     }
 }
@@ -152,6 +283,7 @@
         justify-content: center;
         padding: 20px;
         height: 150px;
+
     
     
     
@@ -161,6 +293,7 @@
             align-items: center;
             justify-content: space-between;
             width: 100%;
+            height: 100%;
     
             .searchItem-two__container-inputBox {
                 input {
@@ -181,27 +314,77 @@
             }
     
             .searchItem-two__container__ports {
-                display: flex;
-                align-items: flex-start;
-                flex-direction: column;
-                padding: 20px;
+                display: grid;
                 width: 100%;
+                height: 100%;
+                align-items: center;
+                grid-template-columns: 40% 40% 20%;
+                grid-template-rows: 34% 33% 33%;
+                grid-template-areas:
+                "a a a"
+                "b b b"
+                "c c c";
     
                 .searchItem-two__container__ports-info {
+                    grid-area: a;
                     display: flex;
-                    gap: 20px;
-    
+                    gap: 10px;
+                    margin: auto;
+                    background-color: #f4f5f7;
+                    border: 1px solid rgb(215, 215, 215);
+                    padding: 5px 8px;
+                    border-radius: 4px;
+
+                    p{
+                        margin-bottom: 0px;
+                        font-weight: bold;
+                    }
+                    svg{margin-top: 2%;}
+
                 }
-    
-                .searchItem-two__container__ports-info__firstp {
-                    margin-right: 32px;
+                .passenger-seat{
+                    grid-area: b;
+                    width: 100%;
+                    display: grid;
+                    border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
+
+                    .passenger-seat-div1{
+
+                        width: 100%;
+
+                        .passenger-seat-div2{
+                            width: 100%;
+                            display: grid;
+                            grid-template-columns: 70% 30%;
+                            text-align: end;
+
+                            .passenger-seat-div2-p{
+                                text-align: left;
+                            }
+
+                            p{
+                                padding: 7px 0px;
+                                margin-bottom: 0px;
+                                color: gray;
+                                font-weight: 400;
+                            }
+                        }
+                    }
+                }
+                .passenger-date{
+                    grid-area: c;
+                    height: 100%;
+                    text-align: end;
+                    padding: 5px 0px;
+                    border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
+                    color: gray;
+                    font-weight: 400;
                 }
             }
     
     
             .searchItem-two__container-button {
-                margin-right: 60px;
-                margin-top: 40px;
+                margin: 30px 30px;
                 background-color: rgb(240, 105, 60);
                 height: 50px;
                 width: 180px;
