--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -6,6 +6,7 @@
   .header-container {
     position: relative;
     width: 100%;
+    top: 0;
     z-index: 2;
     font-family: "Poppins", sans-serif;
 
@@ -101,6 +102,7 @@
   .header-container {
     position: fixed;
     width: 100%;
+    top: 0;
     z-index: 2;
     font-family: "Poppins", sans-serif;
 
@@ -195,6 +197,7 @@
 
   .header-container {
     position: fixed;
+    top: 0;
     width: 100%;
     z-index: 2;
     font-family: "Poppins", sans-serif;
