--- a/src/components/seatScreen/index.scss
+++ b/src/components/seatScreen/index.scss
@@ -37,6 +37,7 @@
 
 
         .middle_div {
+            margin-bottom: 400px;
             display: grid;
             gap: 1500px;
 
@@ -244,8 +245,9 @@
     }
 
     .footer {
-        margin-top: 400px;
-        padding-top: 150px;
+        display: flex;
+        padding-top: 50px;
+        margin-bottom: 100px;
         background-color: #f3f4f6;
         box-shadow: 0px -10px 100px rgba(0, 0, 0, 0.1);
     }
@@ -357,6 +359,7 @@
 
 
         .middle_div {
+            margin-bottom: 400px;
             display: grid;
             position: relative;
 
@@ -561,8 +564,8 @@
     }
 
     .footer {
-        margin-top: 400px;
-        padding-top: 150px;
+        margin-bottom: 50px;
+        padding-top: 50px;
         background-color: #f3f4f6;
         box-shadow: 0px -10px 100px rgba(0, 0, 0, 0.1);
     }
@@ -674,6 +677,7 @@
 
 
         .middle_div {
+            margin-bottom: 400px;
             display: grid;
             position: relative;
 
@@ -986,6 +990,7 @@
 
 
         .middle_div {
+            margin-bottom: 400px;
             display: grid;
             position: relative;
             overflow: hidden;
@@ -1192,8 +1197,8 @@
     }
 
     .footer {
-        margin-top: 400px;
-        padding-top: 150px;
+        margin-bottom: 50px;
+        padding-top: 50px;
         background-color: #f3f4f6;
         box-shadow: 0px -10px 100px rgba(0, 0, 0, 0.1);
     }
@@ -1302,6 +1307,7 @@
 
 
         .middle_div {
+            margin-bottom: 400px;
             display: grid;
             position: relative;
             overflow: hidden;
@@ -1510,8 +1516,8 @@
     }
 
     .footer {
-        margin-top: 400px;
-        padding-top: 150px;
+        margin-bottom: 50px;
+        padding-top: 50px;
         background-color: #f3f4f6;
         box-shadow: 0px -10px 100px rgba(0, 0, 0, 0.1);
     }
