--- a/src/components/content/login/index.scss
+++ b/src/components/content/login/index.scss
@@ -5,6 +5,7 @@
 .login__container {
     max-width: 400px;
     margin: 100px auto;
+    margin-top: 200px;
     padding: 20px;
     background-color: rgb(219, 219, 219);
     border-radius: 12px;
@@ -39,7 +40,8 @@
             border-radius: 0;
         }
     }
-    .login-button{
+
+    .login-button {
         border: none;
         border-radius: 4px;
         padding: 10px 20px;
@@ -54,7 +56,7 @@
         }
     }
 
-  
+
 
     .signup-button {
         cursor: pointer;
