--- a/src/components/content/register/index.scss
+++ b/src/components/content/register/index.scss
@@ -4,6 +4,7 @@
 .signup-container {
     max-width: 400px;
     margin: 40px auto;
+    margin-top: 120px;
     padding: 20px;
     background-color: rgb(219, 219, 219);
     border-radius: 12px;
@@ -25,7 +26,7 @@
             label {
                 display: block;
                 font-weight: bold;
- 
+
 
             }
 
@@ -53,7 +54,7 @@
             &:hover {
                 background-color: #536aa0;
             }
-         
+
         }
     }
 
@@ -70,7 +71,7 @@
         }
     }
 
-    p{
+    p {
         margin-bottom: 5px;
         margin-top: 15px;
         font-size: 15px;
@@ -93,9 +94,9 @@
         font-size: 1.5rem;
         font-weight: 600;
         color: #f3f4f6;
-      }
-      
-      .nav_links {
+    }
+
+    .nav_links {
         padding-right: 9%;
         list-style: none;
         display: flex;
@@ -105,18 +106,18 @@
         color: white;
 
 
-          .link a {
+        .link a {
             font-weight: 500;
             color: #f3f4f6;
             transition: 0.3s;
-          }
-          
-          .link a:hover {
+        }
+
+        .link a:hover {
             color: #8a8a8a;
-          }
+        }
 
-      }
-      
-      
+    }
 
-  }
+
+
+}
