--- a/src/components/content/searchContent/searchItem2/index.scss
+++ b/src/components/content/searchContent/searchItem2/index.scss
@@ -1,4 +1,3 @@
-
 @media (max-width: 767px) {
 
     .searchItem-two__container {
@@ -7,10 +6,8 @@
         justify-content: center;
         padding: 10px;
         min-height: 120px;
-    
-    
-    
-    
+
+
         .searchItem-two__container-form {
             display: grid;
             align-items: center;
@@ -22,10 +19,11 @@
             grid-template-areas:
                 "a a c"
                 "b b b";
-    
+
             .searchItem-two__container-inputBox {
                 grid-area: a;
                 width: 100%;
+
                 input {
                     border-style: none;
                     outline: none;
@@ -36,14 +34,14 @@
                     background-color: rgb(244, 246, 248);
                     box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
                     border-radius: 0;
-    
-    
+
+
                     &::placeholder {
                         color: rgb(140, 140, 141);
                     }
                 }
             }
-    
+
             .searchItem-two__container__ports {
                 display: grid;
                 grid-area: b;
@@ -54,10 +52,10 @@
                 grid-template-columns: 40% 40% 20%;
                 grid-template-rows: 34% 33% 33%;
                 grid-template-areas:
-                "a a a"
-                "b b b"
-                "c c c";
-    
+                    "a a a"
+                    "b b b"
+                    "c c c";
+
                 .searchItem-two__container__ports-info {
                     grid-area: a;
                     display: flex;
@@ -68,35 +66,38 @@
                     padding: 5px 8px;
                     border-radius: 4px;
 
-                    p{
+                    p {
                         margin-bottom: 0px;
                         font-weight: bold;
                     }
-                    svg{margin-top: 2%;}
-    
+
+                    svg {
+                        margin-top: 2%;
+                    }
+
                 }
-    
-                .passenger-seat{
+
+                .passenger-seat {
                     grid-area: b;
                     width: 100%;
                     display: grid;
                     border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
 
-                    .passenger-seat-div1{
+                    .passenger-seat-div1 {
 
                         width: 100%;
 
-                        .passenger-seat-div2{
+                        .passenger-seat-div2 {
                             width: 100%;
                             display: grid;
                             grid-template-columns: 70% 30%;
                             text-align: end;
 
-                            .passenger-seat-div2-p{
+                            .passenger-seat-div2-p {
                                 text-align: left;
                             }
 
-                            p{
+                            p {
                                 padding: 7px 0px;
                                 margin-bottom: 0px;
                                 color: gray;
@@ -105,7 +106,8 @@
                         }
                     }
                 }
-                .passenger-date{
+
+                .passenger-date {
                     grid-area: c;
                     height: 100%;
                     text-align: end;
@@ -113,13 +115,15 @@
                     border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
                     color: gray;
                     font-weight: 400;
-                    p{
+
+                    p {
                         margin-bottom: 0px !important;
                     }
                 }
 
 
             }
+
             .searchItem-two__container-button {
                 grid-area: c;
                 margin: auto;
@@ -129,12 +133,12 @@
                 border-radius: 4px;
                 border: 0px;
                 font-size: 10px;
-    
+
                 &:hover {
                     background-color: #536aa0;
                 }
             }
-            
+
         }
     }
 }
@@ -147,21 +151,22 @@
         justify-content: center;
         padding: 20px;
         height: 150px;
-    
-    
-    
-    
+
+
+
+
         .searchItem-two__container-form {
             display: grid;
             align-items: center;
             justify-content: space-between;
             width: 100%;
             grid-template-columns: 35% 25% 40%;
-    
+
             .searchItem-two__container-inputBox {
                 grid-column: 1;
                 grid-row: 1;
                 width: 100%;
+
                 input {
                     border-style: none;
                     outline: none;
@@ -171,14 +176,14 @@
                     background-color: rgb(244, 246, 248);
                     box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
                     border-radius: 0;
-    
-    
+
+
                     &::placeholder {
                         color: rgb(140, 140, 141);
                     }
                 }
             }
-    
+
             .searchItem-two__container__ports {
                 display: grid;
                 grid-column: 3;
@@ -190,10 +195,10 @@
                 grid-template-columns: 40% 40% 20%;
                 grid-template-rows: 34% 33% 33%;
                 grid-template-areas:
-                "a a a"
-                "b b b"
-                "c c c";
-    
+                    "a a a"
+                    "b b b"
+                    "c c c";
+
                 .searchItem-two__container__ports-info {
                     grid-area: a;
                     display: flex;
@@ -204,35 +209,38 @@
                     padding: 5px 8px;
                     border-radius: 4px;
 
-                    p{
+                    p {
                         margin-bottom: 0px;
                         font-weight: bold;
                     }
-                    svg{margin-top: 2%;}
-    
+
+                    svg {
+                        margin-top: 2%;
+                    }
+
                 }
-    
-                .passenger-seat{
+
+                .passenger-seat {
                     grid-area: b;
                     width: 100%;
                     display: grid;
                     border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
 
-                    .passenger-seat-div1{
+                    .passenger-seat-div1 {
 
                         width: 100%;
 
-                        .passenger-seat-div2{
+                        .passenger-seat-div2 {
                             width: 100%;
                             display: grid;
                             grid-template-columns: 70% 30%;
                             text-align: end;
 
-                            .passenger-seat-div2-p{
+                            .passenger-seat-div2-p {
                                 text-align: left;
                             }
 
-                            p{
+                            p {
                                 padding: 7px 0px;
                                 margin-bottom: 0px;
                                 color: gray;
@@ -241,7 +249,8 @@
                         }
                     }
                 }
-                .passenger-date{
+
+                .passenger-date {
                     grid-area: c;
                     height: 100%;
                     text-align: end;
@@ -249,13 +258,15 @@
                     border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
                     color: gray;
                     font-weight: 400;
-                    p{
+
+                    p {
                         margin-bottom: 0px !important;
                     }
                 }
 
 
             }
+
             .searchItem-two__container-button {
                 margin: auto;
                 grid-column: 2;
@@ -265,12 +276,12 @@
                 width: 130px;
                 border-radius: 4px;
                 border: 0px;
-    
+
                 &:hover {
                     background-color: #536aa0;
                 }
             }
-            
+
         }
     }
 }
@@ -284,35 +295,32 @@
         padding: 20px;
         height: 150px;
 
-    
-    
-    
-    
         .searchItem-two__container-form {
             display: flex;
             align-items: center;
             justify-content: space-between;
             width: 100%;
             height: 100%;
-    
+
             .searchItem-two__container-inputBox {
                 input {
                     border-style: none;
                     outline: none;
                     margin-left: 10px;
                     margin-top: 25px;
+                    height: 35px;
                     background-color: rgb(244, 246, 248);
                     box-shadow: 2px 2px 4px rgba(93, 93, 93, 0.2);
                     border-radius: 0;
                     width: 300px;
-    
-    
+
+
                     &::placeholder {
                         color: rgb(140, 140, 141);
                     }
                 }
             }
-    
+
             .searchItem-two__container__ports {
                 display: grid;
                 width: 100%;
@@ -321,10 +329,10 @@
                 grid-template-columns: 40% 40% 20%;
                 grid-template-rows: 34% 33% 33%;
                 grid-template-areas:
-                "a a a"
-                "b b b"
-                "c c c";
-    
+                    "a a a"
+                    "b b b"
+                    "c c c";
+
                 .searchItem-two__container__ports-info {
                     grid-area: a;
                     display: flex;
@@ -335,34 +343,38 @@
                     padding: 5px 8px;
                     border-radius: 4px;
 
-                    p{
+                    p {
                         margin-bottom: 0px;
                         font-weight: bold;
                     }
-                    svg{margin-top: 2%;}
+
+                    svg {
+                        margin-top: 2%;
+                    }
 
                 }
-                .passenger-seat{
+
+                .passenger-seat {
                     grid-area: b;
                     width: 100%;
                     display: grid;
                     border-bottom: 2px dotted rgba(215, 215, 215, 0.468);
 
-                    .passenger-seat-div1{
+                    .passenger-seat-div1 {
 
                         width: 100%;
 
-                        .passenger-seat-div2{
+                        .passenger-seat-div2 {
                             width: 100%;
                             display: grid;
                             grid-template-columns: 70% 30%;
                             text-align: end;
 
-                            .passenger-seat-div2-p{
+                            .passenger-seat-div2-p {
                                 text-align: left;
                             }
 
-                            p{
+                            p {
                                 padding: 7px 0px;
                                 margin-bottom: 0px;
                                 color: gray;
@@ -371,7 +383,8 @@
                         }
                     }
                 }
-                .passenger-date{
+
+                .passenger-date {
                     grid-area: c;
                     height: 100%;
                     text-align: end;
@@ -381,8 +394,8 @@
                     font-weight: 400;
                 }
             }
-    
-    
+
+
             .searchItem-two__container-button {
                 margin: 30px 30px;
                 background-color: rgb(240, 105, 60);
@@ -390,7 +403,7 @@
                 width: 180px;
                 border-radius: 4px;
                 border: 0px;
-    
+
                 &:hover {
                     background-color: #536aa0;
                 }
