--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -11,22 +11,22 @@
     font-family: "Poppins", sans-serif;
     margin-top: 120px;
 
-  
+
     .footer_container {
       display: grid;
       grid-template-columns: 100%;
       grid-gap: 25px;
     }
-  
+
     .footer_col {
-      
+
       h3 {
         margin-bottom: 1rem;
         font-size: 1.5rem;
         font-weight: 600;
         color: #333333;
       }
-      
+
       h4 {
         margin-top: 1rem;
         margin-bottom: 1rem;
@@ -34,13 +34,13 @@
         font-weight: 600;
         color: #333333;
       }
-      
+
       p {
         color: #767268;
         cursor: pointer;
         transition: 0.3s;
         margin: -1px;
-        
+
         &:hover {
           color: #333333;
         }
@@ -52,16 +52,16 @@
 @media (min-width: 768px) and (max-width: 1023px) {
 
   .footer {
-    background-color: #ffffff;
+    background-color: #ce3131;
     padding: 5rem;
     font-family: "Poppins", sans-serif;
-  
+
     .footer_container {
       display: grid;
       grid-template-columns: 2fr repeat(3, 1fr);
       gap: 5rem;
     }
-  
+
     .footer_col {
       h3 {
         margin-bottom: 1rem;
@@ -69,20 +69,20 @@
         font-weight: 600;
         color: #333333;
       }
-      
+
       h4 {
         margin-bottom: 1rem;
         font-size: 1.2rem;
         font-weight: 600;
         color: #333333;
       }
-      
+
       p {
         margin-bottom: 1rem;
         color: #767268;
         cursor: pointer;
         transition: 0.3s;
-        
+
         &:hover {
           color: #333333;
         }
@@ -94,17 +94,17 @@
 @media (min-width: 1024px) {
 
   .footer {
-    background-color: #ffffff;
+    background-color: #812929;
     padding: 50px;
     font-family: "Poppins", sans-serif;
-    
-  
+
+
     .footer_container {
       display: grid;
       grid-template-columns: 2fr repeat(3, 1fr);
       gap: 4rem;
     }
-  
+
     .footer_col {
       h3 {
         margin-bottom: 1rem;
@@ -112,20 +112,20 @@
         font-weight: 600;
         color: #333333;
       }
-      
+
       h4 {
         margin-bottom: 1rem;
         font-size: 1.2rem;
         font-weight: 600;
         color: #333333;
       }
-      
+
       p {
         margin-bottom: 1rem;
         color: #767268;
         cursor: pointer;
         transition: 0.3s;
-        
+
         &:hover {
           color: #333333;
         }
